Show only implemented passive bonuses as active